feat: File content service